# rapidjsonwrapper

./: .gitignore  CMakeLists.txt  README.md
include/rapidjsonwrapper/: rapidjsonwrapper.hpp
src/: main.cpp
